Add new math functionalities. Add JMH tests.